2008-06-30  David Smith  <dsmith@redhat.com>

	* task_finder.c (stap_utrace_detach_ops): Removed check to see if
	thread has a mm (in the case where a thread isn't quite dead
	yet).
	(stap_utrace_attach): Minor error handling improvement.
	(__stp_utrace_attach_match_tsk): Ditto.

2008-06-24  David Smith  <dsmith@redhat.com>

	From: Srinivasa DS <srinivasa@in.ibm.com>
	* syscall.h: Added powerpc support.

2008-06-23  David Smith  <dsmith@redhat.com>

	* task_finder.c (__stp_utrace_task_finder_target_quiesce): Fixed
	vm_callback offset by shifting it left PAGE_SHIFT bits.
	(__stp_target_call_vm_callback): Ditto.
	(__stp_utrace_task_finder_target_syscall_exit): Ditto.

	* task_finder.c (__stp_utrace_task_finder_report_exec): Handles
	relative exec paths correctly.

	* task_finder_vma.c (__stp_tf_vma_hash): Improved determination of
	whether this is a 64-bit platform.
	* syscall.h: Handles kernels with older style register
	definitions.

	* task_finder.c (__stp_tf_vm_cb): New function.
	(stap_register_task_finder_target): Sets up syscall entry and
	syscall exit handlers.
	(__stp_find_file_based_vma): New function.
	(__stp_utrace_task_finder_target_syscall_entry): New function.
	Saves vma information off at syscall entry.
	(__stp_target_call_vm_callback): New function.
	(__stp_utrace_task_finder_target_syscall_exit): New function.
	Handles changes to memory maps based on information saved at
	syscall entry.
	* syscall.h: New file containing syscall function.
	* task_finder_vma.c: New file containing saved vma information
	handling functions.

	* regs.h: Removed trailing semicolons from macro definitions.

2008-06-17  David Smith  <dsmith@redhat.com>

	* task_finder.c (__stp_utrace_attach_match_filename): Uses new
	__STP_ATTACHED_TASK_EVENTS macro to determine which events to set
	on a newly found process based on whether the
	stap_task_finder_target structure has a vm_callback defined.
	(stap_start_task_finder): Ditto.

2008-06-16  David Smith  <dsmith@redhat.com>
