@@ -1,3 +1,10 @@
+2008-07-01  David Smith  <dsmith@redhat.com>
+
+	* task_finder.c (__stp_get_mm_path): Corrected error return code.
+	(__stp_utrace_attach_match_tsk): Ignores ENOENT error from
+	__stp_get_mm_path(). 
+	(stap_start_task_finder): Ditto.
+
 2008-06-30  David Smith  <dsmith@redhat.com>
 
 	* task_finder.c (stap_utrace_detach_ops): Removed check to see if
